syntax = "proto3";
package proto;

message MovieSearchRequest {
    string apikey = 1;
    string searchword = 2;
    string pagination = 3;
}

message Movie {
    string Title = 1;
    string Year = 2;
    string imdbID = 3;
    string Type = 4;
    string Poster = 5;
}

message MovieSearchResult {
    repeated Movie Search = 1;
    string totalResults = 2;
    string Response = 3;
}

service OMDBapi {
    rpc GetMovies(MovieSearchRequest) returns (MovieSearchResult) {}
}